Update documentation and api url
